[gd_scene load_steps=11 format=3 uid="uid://bprvdorybv34l"]

[ext_resource type="Script" uid="uid://dn55be5xjtwgh" path="res://Scene/setting.gd" id="1_83tj7"]
[ext_resource type="FontFile" uid="uid://dio0vawax0t0d" path="res://Google Dino Run 911 Vers/bytebounce/ByteBounce.ttf" id="1_nliig"]

[sub_resource type="CanvasTexture" id="CanvasTexture_if0cc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kslqn"]
texture = SubResource("CanvasTexture_if0cc")
modulate_color = Color(0, 0.988235, 0, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_83tj7"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cjxtx"]
texture = SubResource("CanvasTexture_83tj7")
modulate_color = Color(0.278431, 0.631373, 0, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_cjxtx"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_if0cc"]
texture = SubResource("CanvasTexture_cjxtx")
modulate_color = Color(0, 0.984314, 0, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_nliig"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_83tj7"]
texture = SubResource("CanvasTexture_nliig")
modulate_color = Color(0, 1, 0, 1)

[node name="Setting" type="Node2D"]
script = ExtResource("1_83tj7")

[node name="Panel" type="Panel" parent="."]
offset_left = 320.0
offset_top = 180.0
offset_right = 960.0
offset_bottom = 540.0

[node name="Panel" type="Panel" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 620.0
offset_bottom = 340.0

[node name="Setting" type="Label" parent="Panel/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_top = 20.0
offset_right = 64.0
offset_bottom = 55.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_nliig")
theme_override_font_sizes/font_size = 70
text = "Setting"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -80.0
offset_right = 580.0
offset_bottom = 52.0
grow_vertical = 2
alignment = 1

[node name="Music" type="Label" parent="Panel/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_nliig")
theme_override_font_sizes/font_size = 50
text = "Music"

[node name="Music_Volume" type="HSlider" parent="Panel/Panel/VBoxContainer"]
layout_mode = 2
min_value = -15.0
max_value = 50.0
value = 10.0
ticks_on_borders = true

[node name="MarginContainer" type="MarginContainer" parent="Panel/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/Panel/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="SFX" type="Label" parent="Panel/Panel/VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_nliig")
theme_override_font_sizes/font_size = 50
text = "SFX"

[node name="SFX_Volume" type="HSlider" parent="Panel/Panel/VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
min_value = -15.0
max_value = 50.0
value = 10.0

[node name="Save&Quit" type="Button" parent="Panel/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -50.0
offset_right = 75.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/icon_hover_pressed_color = Color(0, 1, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_nliig")
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxTexture_kslqn")
theme_override_styles/pressed = SubResource("StyleBoxTexture_cjxtx")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_if0cc")
theme_override_styles/normal = SubResource("StyleBoxTexture_83tj7")
text = "Save and Quit"

[connection signal="value_changed" from="Panel/Panel/VBoxContainer/Music_Volume" to="." method="_on_music_volume_value_changed"]
[connection signal="value_changed" from="Panel/Panel/VBoxContainer/MarginContainer/VBoxContainer2/SFX_Volume" to="." method="_on_sfx_volume_value_changed"]
[connection signal="pressed" from="Panel/Panel/Save&Quit" to="." method="_on_save_quit_pressed"]
